# pmemo

./: README.md  deploy.sh  docker-compose.yml  setup.sh
backend/: .env  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: auth.py  memos.py  tags.py
backend/app/core/: config.py  database.py
backend/app/crud/: base.py  crud_memo.py  crud_tag.py  crud_user.py
backend/app/models/: memo.py  user.py
backend/app/schemas/: memo.py  user.py
client/: package.json
client/src/: App.js
frontend/: .eslintrc.cjs  Dockerfile  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  PrivateRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Login.tsx  MemoEdit.tsx  MemoList.tsx  Register.tsx  TagManage.tsx
frontend/src/utils/: api.ts
scripts/: setup.sh
server/: Dockerfile  app.js  package.json
